[package]
name = "hyper-fail"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
tokio = { version = "0.2", features = ["macros", "time"] }
